--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,11 @@ app.*.map.json
 # Ignore generated plugin files
 **/generated_plugins.cmake
 **/GeneratedPluginRegistrant.*
+
+# iOS/macOS build and workspace files
+ios/Flutter/Generated.xcconfig
+ios/Flutter/ephemeral/
+ios/Pods/
+ios/Runner.xcworkspace/
+macos/Flutter/ephemeral/
+macos/Pods/
