--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   provider:
   sqflite: ^2.4.2
   path: ^1.9.1
+  tflite_flutter: ^0.11.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +61,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/shield.png
-    - assets/malware_model.onnx
+    - assets/model.tflite
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
