--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  shared_preferences: ^2.2.0
   sqflite_common_ffi: any
   flutter:
     sdk: flutter
@@ -40,11 +41,9 @@ dependencies:
   provider:
   sqflite: ^2.4.2
   path: ^1.9.1
-  file_picker: ^10.1.2
-  
   tflite_flutter: ^0.11.0
   path_provider: ^2.1.5
-
+  file_picker: ^10.1.2
 
 dev_dependencies:
   flutter_test:
