--- a/windows/runner/CMakeLists.txt
+++ b/windows/runner/CMakeLists.txt
@@ -38,3 +38,19 @@ target_include_directories(${BINARY_NAME} PRIVATE "${CMAKE_SOURCE_DIR}")
 
 # Run the Flutter tool portions of the build. This must not be removed.
 add_dependencies(${BINARY_NAME} flutter_assemble)
+
+# Copy tensorflowlite_c.dll to the output folder so it can be loaded at runtime.
+add_custom_command(TARGET ${BINARY_NAME} POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E copy_if_different
+    "${CMAKE_SOURCE_DIR}/runner/libtensorflowlite_c-win.dll"
+    "$<TARGET_FILE_DIR:${BINARY_NAME}>"
+)
+
+# Copy TFLite DLL into the runtime blobs directory after build
+add_custom_command(TARGET ${BINARY_NAME} POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E make_directory
+    "$<TARGET_FILE_DIR:${BINARY_NAME}>/blobs"
+  COMMAND ${CMAKE_COMMAND} -E copy_if_different
+    "${CMAKE_SOURCE_DIR}/runner/libtensorflowlite_c-win.dll"
+    "$<TARGET_FILE_DIR:${BINARY_NAME}>/blobs/libtensorflowlite_c-win.dll"
+)
