Real time and scheduled scan
- Added real time scan (small scale for performance) where it will instantly scan file that is added or modify
- added scheduled scan (never, daily or monthly option) where it will scan according to user option

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  watcher: ^1.0.0
   shared_preferences: ^2.2.0
   sqflite_common_ffi: any
   flutter:
