--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   tflite_flutter: ^0.11.0
   path_provider: ^2.1.5
   file_picker: ^10.1.2
+  window_manager: ^0.4.3
+  tray_manager: ^0.5.0
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +69,8 @@ flutter:
   assets:
     - assets/shield.png
     - assets/model.tflite
+    - assets/icon.png
+    - assets/icon.ico
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
