--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   file_picker: ^10.1.2
   window_manager: ^0.4.3
   tray_manager: ^0.5.0
+  crypto: ^3.0.6
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +71,7 @@ flutter:
     - assets/shield.png
     - assets/model.tflite
     - assets/icon.ico
+    - assets/icon.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
