--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,8 @@ flutter:
     - assets/model.tflite
     - assets/icon.ico
     - assets/icon.png
+    - assets/scaler.json
+    - assets/pca.json
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
